static/css/style.css
@font-face {
    font-family: 'meslolgsdz_nerd_fontregular';
    src: url('https://pond.computer/static/fonts/meslo_lg_s_dz_regular_nerd_font_complete-webfont.woff2') format('woff2'),
         url('https://pond.computer/static/fonts/meslo_lg_s_dz_regular_nerd_font_complete-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'meslolgsdz_nerd_fontBdIt';
    src: url('https://pond.computer/static/fonts/meslo_lg_s_dz_bold_italic_nerd_font_complete-webfont.woff2') format('woff2'),
         url('https://pond.computer/static/fonts/meslo_lg_s_dz_bold_italic_nerd_font_complete-webfont.woff') format('woff');
    font-weight: bold;
    font-style: italic;

}

@font-face {
    font-family: 'meslolgsdz_nerd_fontbold';
    src: url('https://pond.computer/static/fonts/meslo_lg_s_dz_bold_nerd_font_complete-webfont.woff2') format('woff2'),
         url('https://pond.computer/static/fonts/meslo_lg_s_dz_bold_nerd_font_complete-webfont.woff') format('woff');
    font-weight: bold;
    font-style: normal;

}

@font-face {
    font-family: 'meslolgsdz_nerd_fontitalic';
    src: url('https://pond.computer/static/fonts/meslo_lg_s_dz_italic_nerd_font_complete-webfont.woff2') format('woff2'),
         url('https://pond.computer/static/fonts/meslo_lg_s_dz_italic_nerd_font_complete-webfont.woff') format('woff');
    font-weight: normal;
    font-style: italic;

}

html {
  font-size: 100%;
  overflow-y: scroll;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  font-size: 13px;
}
@media only screen {
  font-size: 2em;
  background: #AABAE9;
  border-bottom: 4px solid #7D7DBB;
  margin: -20px -20px 20px -20px;
  padding: 20px;
  main {
    border: 4px solid #7D7DBB;
    margin: 0 auto;
    max-width: 700px;
    padding: 20px;
  }
  body {
    color: black;
    font-family: 'meslolgsdz_nerd_fontregular';
    font-style: normal;
    font-weight: normal;
    font-size: 13px;
    line-height: 1.2;
    height: 100%;
    max-width: 85ch; padding: 1ch; margin: auto;
  }
  h1, h2, h3, h4, h5 {
    font-family: 'meslolgsdz_nerd_fontbold';
    font-weight: bold;
    font-style: normal;
  }
  p {
    font-family: 'meslolgsdz_nerd_fontregular';
    font-size: 13px;
    font-weight: normal;
    font-style: normal;
  }
  h1 {
    font-size: 2em;
    color: black;
    background: white;
    border: 4px solid #7D7DBB;
    border-top: 4px solid #7D7DBB;
    padding: 20px;
    margin-top: 10px;
  }
  h2 {
    font-size: 2em;
  }
  h3 {
    font-size: 1.5em;
  }
  h4 {
    font-size: 1.2em;
  }
  h5 {
    font-size: 1em;
  }
  h6 {
    font-size: 0.9em;
  }
  a {
    text-decoration: underline;
  }
  a:hover {
    color: black;
  }
  a:active {
    color: lightyellow;
  }
  .links {
    font-size: 13px;
    background: white;
    border: 4px solid #7D7DBB;
    border-top: 4px solid #7D7DBB;
    border-bottom: 4px solid #7D7DBB;
  }
  footer {
    padding-top: 2em;
    padding-bottom: 3em;
  }
  table {
	  table-layout: fixed;
}
  *::-moz-selection {
    background: black;
    color: white;
  }
  *::selection {
    background: black;
    color: white;
  }
  a::-moz-selection {
    background: #64B196;
    color: black;
  }
  a::selection {
    background: #64B196;
    color: black;
  }
}

